add remaining files

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -70,5 +70,6 @@ jobs:
       - name: dbt compile (validation)
         run: |
           cd banking_dbt
+          dbt clean
           dbt deps
           dbt compile
