--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,38 +2,29 @@ name: CD
 
 on:
   push:
-    branches: [ main ]   # deploy only from main
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # ------------------------
-      # Checkout repo
-      # ------------------------
+
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # ------------------------
-      # Python setup
-      # ------------------------
       - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
-      # ------------------------
-      # Install dbt
-      # ------------------------
       - name: Install dbt Snowflake adapter
         run: |
           python -m pip install --upgrade pip
           pip install dbt-snowflake
 
-      # ------------------------
-      # Configure dbt profile
-      # ------------------------
       - name: Setup dbt profile
         run: |
           mkdir -p ~/.dbt
@@ -52,12 +43,9 @@ jobs:
                 schema: ANALYTICS
           EOL
 
-      # ------------------------
-      # Deploy dbt project
-      # ------------------------
       - name: dbt run + test (prod)
         run: |
           cd banking_dbt
+          dbt clean
           dbt deps
-          dbt run    # builds production models on Snowflake
-          dbt test   # validates production data
+          dbt build
